--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -191,17 +191,17 @@ jobs:
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > env.config
           echo "FRONTEND_URL=${{ secrets.FRONTEND_URL }}" >> env.config
           cat env.config || echo "Failed to create or read env.config file"
-
-      # Guardar el directorio backend como artefacto, excluyendo venv
-      - name: Upload Backend Artifact
+      
+      - name: Zip artifact for deployment
+        run: zip release.zip ./backend/src/* -r
+  
+      - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v4
         with:
           name: backend-artifact
           path: |
-            backend/src/
-            !backend/src/venv/
-            !backend/src/output.tar.gz
-          if-no-files-found: error
+            release.zip
+            !venv/
 
   build-and-test-frontend:
     runs-on: ubuntu-latest
@@ -241,33 +241,6 @@ jobs:
           path: frontend/dist/
           if-no-files-found: error
 
-  #deploy-backend:
-  #  needs: build-and-test-backend
-  #  runs-on: ubuntu-latest
-  #  steps:
-  #    # Descargar el artefacto del backend
-  #    - name: Download Backend Artifact
-  #      uses: actions/download-artifact@v4
-  #      with:
-  #        name: backend-artifact
-  #        path: backend/src
-#
-  #    # Desplegar el backend en Azure App Service
-  #    - name: Deploy to Azure App Service
-  #      uses: azure/webapps-deploy@v3
-  #      with:
-  #        app-name: 'Inversur-QA'
-  #        publish-profile: ${{ secrets.AZURE_APP_SERVICE_PUBLISH_PROFILE }}
-  #        package: backend/src
-  #      env:
-  #        POST_BUILD_COMMAND: |
-  #          curl -o get-pip.py https://bootstrap.pypa.io/get-pip.py && \
-  #          /usr/bin/python3.9 get-pip.py && \
-  #          /usr/bin/python3.9 -m pip install -r requirements.txt
-
-
-
-
   deploy-backend:
     needs: build-and-test-backend
     runs-on: ubuntu-latest
@@ -276,23 +249,23 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: backend-artifact
-          path: backend/src
-      - name: Debug - List Files in backend/src
-        run: |
-          cd backend/src
-          ls -R -la
+      
+      - name: Unzip artifact for deployment
+        run: unzip release.zip
+
       - name: Login to Azure
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
+
       - name: Stop Azure App Service
         uses: azure/CLI@v1
         with:
           inlineScript: |
             az webapp stop --name Inversur-QA --resource-group Inversur
+      
       - name: Generate web.config
         run: |
-          cd backend/src
           cat <<EOF > web.config
           <?xml version="1.0" encoding="utf-8"?>
           <configuration>
@@ -314,25 +287,23 @@ jobs:
           </configuration>
           EOF
           ls -la
+
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'Inversur-QA'
           publish-profile: ${{ secrets.AZURE_APP_SERVICE_PUBLISH_PROFILE }}
-          package: backend/src
         env:
           POST_BUILD_COMMAND: |
             curl -o get-pip.py https://bootstrap.pypa.io/get-pip.py && \
             /usr/bin/python3.9 get-pip.py && \
             /usr/bin/python3.9 -m pip install -r requirements.txt
+
       - name: Start Azure App Service
         uses: azure/CLI@v1
         with:
           inlineScript: |
             az webapp start --name Inversur-QA --resource-group Inversur
-
-
-
 
   deploy-frontend:
     needs: build-and-test-frontend
