--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -169,71 +169,52 @@ jobs:
   build-and-test-backend:
     runs-on: ubuntu-latest
     steps:
-      # Checkout del código
       - uses: actions/checkout@v4
-
-      # Configurar Python para el backend FastAPI
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: '3.9'
-      
       - name: Install Backend Dependencies
         run: |
           cd backend/src
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      # Generar archivo env.config para el backend
       - name: Create Backend Environment File
         run: |
           cd backend/src
           echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > env.config
           echo "FRONTEND_URL=${{ secrets.FRONTEND_URL }}" >> env.config
           cat env.config || echo "Failed to create or read env.config file"
-      
-      - name: Zip artifact for deployment
-        run: zip release.zip ./backend/src/* -r
-  
-      - name: Upload artifact for deployment jobs
+      - name: Upload Backend Artifact
         uses: actions/upload-artifact@v4
         with:
           name: backend-artifact
           path: |
-            release.zip
-            !venv/
+            backend/src/
+            !backend/src/venv/
+            !backend/src/output.tar.gz
+          if-no-files-found: error
 
   build-and-test-frontend:
     runs-on: ubuntu-latest
     steps:
-      # Checkout del código
       - uses: actions/checkout@v4
-
-      # Configurar Node.js para el frontend React
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-
-      # Instalar dependencias
       - name: Install Frontend Dependencies
         run: |
           cd frontend
           npm install
-
-      # Generar archivo .env para el frontend
       - name: Create Frontend .env File
         run: |
           cd frontend
           echo "VITE_API_URL=${{ secrets.BACKEND_URL }}" > .env
-
-      # Construir el frontend
       - name: Build Frontend
         run: |
           cd frontend
           npm run build
-
-      # Guardar el directorio dist/ como artefacto para el despliegue
       - name: Upload Frontend Artifact
         uses: actions/upload-artifact@v4
         with:
@@ -249,23 +230,38 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: backend-artifact
-      
-      - name: Unzip artifact for deployment
-        run: unzip release.zip
-
+          path: backend/src
+      - name: Debug - List Files in backend/src
+        run: |
+          cd backend/src
+          ls -R -la
       - name: Login to Azure
         uses: azure/login@v1
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
-
       - name: Stop Azure App Service
         uses: azure/CLI@v1
         with:
           inlineScript: |
             az webapp stop --name Inversur-QA --resource-group Inversur
-      
-      - name: Generate web.config
+      - name: Generate startup.sh and web.config
         run: |
+          cd backend/src
+          # Generate startup.sh
+          cat <<EOF > startup.sh
+          #!/bin/bash
+          cd /home/site/wwwroot
+          echo "Current working directory: \$(pwd)"
+          ls -la
+          # Install dependencies in a persistent location
+          /usr/bin/python3.9 -m pip install --upgrade pip --target=/home/site/wwwroot/.python_packages/lib/site-packages
+          /usr/bin/python3.9 -m pip install -r requirements.txt --target=/home/site/wwwroot/.python_packages/lib/site-packages
+          # Set PYTHONPATH to include installed packages
+          export PYTHONPATH=/home/site/wwwroot:/home/site/wwwroot/.python_packages/lib/site-packages:\$PYTHONPATH
+          /usr/bin/python3.9 -m uvicorn main:app --host 0.0.0.0 --port \$PORT --log-level debug
+          EOF
+          chmod +x startup.sh
+          # Generate web.config
           cat <<EOF > web.config
           <?xml version="1.0" encoding="utf-8"?>
           <configuration>
@@ -273,32 +269,26 @@ jobs:
               <handlers>
                 <add name="PythonHandler" path="*" verb="*" modules="httpPlatformHandler" resourceType="Unspecified"/>
               </handlers>
-              <httpPlatform processPath="/usr/bin/python3.9"
-                            arguments="-m uvicorn main:app --host 0.0.0.0 --port %HTTP_PLATFORM_PORT% --log-level debug"
+              <httpPlatform processPath="/bin/bash"
+                            arguments="/home/site/wwwroot/startup.sh"
                             stdoutLogEnabled="true"
                             stdoutLogFile="/home/LogFiles/python.log"
                             startupTimeLimit="60"
                             processesPerApplication="1">
                 <environmentVariables>
-                  <environmentVariable name="PYTHONPATH" value="/home/site/wwwroot" />
+                  <environmentVariable name="PYTHONPATH" value="/home/site/wwwroot:/home/site/wwwroot/.python_packages/lib/site-packages" />
                 </environmentVariables>
               </httpPlatform>
             </system.webServer>
           </configuration>
           EOF
           ls -la
-
       - name: Deploy to Azure App Service
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'Inversur-QA'
           publish-profile: ${{ secrets.AZURE_APP_SERVICE_PUBLISH_PROFILE }}
-        env:
-          POST_BUILD_COMMAND: |
-            curl -o get-pip.py https://bootstrap.pypa.io/get-pip.py && \
-            /usr/bin/python3.9 get-pip.py && \
-            /usr/bin/python3.9 -m pip install -r requirements.txt
-
+          package: backend/src
       - name: Start Azure App Service
         uses: azure/CLI@v1
         with:
@@ -309,14 +299,11 @@ jobs:
     needs: build-and-test-frontend
     runs-on: ubuntu-latest
     steps:
-      # Descargar el artefacto del frontend
       - name: Download Frontend Artifact
         uses: actions/download-artifact@v4
         with:
           name: frontend-artifact
           path: frontend/dist/
-
-      # Desplegar en Azure Static Web Apps
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
