--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,5 +1,8 @@
 [pytest]
 python_files = test_*.py
 python_functions = test_*
-asyncio_mode = auto
-python_paths = src
+pythonpath = src
+addopts = --asyncio-mode=auto
+asyncio_default_fixture_loop_scope = function
+markers =
+    asyncio: mark a test as an async test
