--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,5 +9,5 @@ python-dotenv==1.0.1
 passlib[bcrypt]==1.7.4
 pydantic[email]==2.9.2
 gunicorn==23.0.0
-python-multipart==0.0.9
-pytest_asyncio==0.26.0
+httpx==0.27.2
+pytest-mock==3.14.0
