--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,10 +20,16 @@
         "react-router-dom": "^7.5.0"
     },
     "devDependencies": {
-        "@testing-library/react": "^14.0.0",
+        "@babel/preset-env": "^7.26.9",
+        "@babel/preset-react": "^7.26.3",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^14.3.1",
+        "@testing-library/user-event": "^14.6.1",
         "@vitejs/plugin-react": "^4.3.1",
+        "babel-jest": "^29.7.0",
         "cypress": "^13.15.0",
-        "jest": "^29.5.0",
+        "identity-obj-proxy": "^3.0.0",
+        "jest": "^29.7.0",
         "vite": "^5.4.8"
     }
 }
