--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
         "react-router-dom": "^7.5.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.26.10",
         "@babel/preset-env": "^7.26.9",
         "@babel/preset-react": "^7.26.3",
         "@testing-library/jest-dom": "^6.6.3",
@@ -30,6 +31,7 @@
         "cypress": "^13.15.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
+        "jest-environment-jsdom": "^29.7.0",
         "vite": "^5.4.8"
     }
 }
