--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,15 +22,19 @@
         "@babel/core": "^7.26.10",
         "@babel/preset-env": "^7.26.9",
         "@babel/preset-react": "^7.26.3",
+        "@cypress/code-coverage": "^3.14.0",
         "@testing-library/jest-dom": "^6.6.3",
         "@testing-library/react": "^14.3.1",
         "@testing-library/user-event": "^14.6.1",
         "@vitejs/plugin-react": "^4.3.1",
         "babel-jest": "^29.7.0",
+        "babel-plugin-istanbul": "^7.0.0",
         "cypress": "^13.15.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
-        "vite": "^6.3.3"
+        "nyc": "^17.1.0",
+        "vite": "^6.3.3",
+        "vite-plugin-istanbul": "^7.0.0"
     }
 }
