--- a/frontend/package.json
+++ b/frontend/package.json
@@ -30,6 +30,7 @@
         "babel-jest": "^29.7.0",
         "babel-plugin-istanbul": "^7.0.0",
         "cypress": "^13.15.0",
+        "dotenv": "^16.5.0",
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
