--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -70,7 +70,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: frontend-artifact
-          path: frontend/dist/
+          path: frontend/dist/*
           if-no-files-found: error
 
   #==========================================
@@ -117,7 +117,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: frontend-artifact
-          path: frontend/dist/
+          path: .
       - name: Create Frontend .env File
         run: |
           echo "VITE_API_URL=${{ secrets.BACKEND_QA_URL }}" > .env
@@ -217,7 +217,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: frontend-artifact
-          path: frontend/dist/
+          path: .
       - name: Create Frontend .env File
         run: |
           echo "VITE_API_URL=${{ secrets.BACKEND_PROD_URL }}" > .env
