--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -56,6 +56,12 @@ jobs:
         run: |
           cd frontend
           npm install
+      - name: Create Frontend .env File
+        run: |
+          cd frontend
+          echo "VITE_API_URL_QA=${{ secrets.BACKEND_QA_URL }}" > .env
+          echo "VITE_API_URL_PROD=${{ secrets.BACKEND_PROD_URL }}" > .env
+          echo "VITE_FRONTEND_URL=${{ secrets.FRONTEND_URL }}" >> .env
       - name: Run Frontend Tests with Coverage
         run: |
           cd frontend
@@ -122,11 +128,6 @@ jobs:
         with:
           name: frontend-artifact
           path: frontend/dist/
-      - name: Create Frontend .env File
-        run: |
-          cd frontend
-          echo "VITE_API_URL=${{ secrets.BACKEND_QA_URL }}" > .env
-          echo "VITE_FRONTEND_URL=${{ secrets.FRONTEND_QA_URL }}" >> .env
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
@@ -211,11 +212,6 @@ jobs:
         with:
           name: frontend-artifact
           path: frontend/dist/
-      - name: Create Frontend .env File
-        run: |
-          cd frontend
-          echo "VITE_API_URL=${{ secrets.BACKEND_PROD_URL }}" > .env
-          echo "VITE_FRONTEND_URL=${{ secrets.FRONTEND_PROD_URL }}" >> .env
       - name: Deploy to Azure Static Web Apps
         uses: Azure/static-web-apps-deploy@v1
         with:
