--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,3 @@
-VITE_API_URL=http://localhost:8000
+VITE_API_URL_QA=http://localhost:8000
+VITE_API_URL_PROD=http://localhost:8000
+VITE_FRONTEND_URL=http://localhost:5173
