--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -155,16 +155,16 @@ jobs:
           echo "VITE_FRONTEND_URL=${{ secrets.FRONTEND_QA_URL }}" >> .env
       - name: Wait for Backend to be Ready
         run: |
-          echo "Waiting for backend to be ready at ${{ secrets.BACKEND_QA_URL }}/health..."
+          echo "Waiting for backend to be ready at ${{ secrets.BACKEND_QA_URL }}/sucursales..."
           for i in {1..12}; do
-            if curl -s -o /dev/null -w "%{http_code}" "${{ secrets.BACKEND_QA_URL }}/health" | grep -q "200"; then
-              echo "Backend is ready!"
+            if curl -s -o /dev/null -w "%{http_code}" "${{ secrets.BACKEND_QA_URL }}/sucursales" | grep -q "200"; then
+              echo "Backend is ready! Responded with HTTP 200"
               exit 0
             fi
             echo "Backend not ready yet. Retrying in 5 seconds..."
             sleep 5
           done
-          echo "Timeout: Backend did not respond after 60 seconds."
+          echo "Timeout: Backend did not respond with HTTP 200 after 60 seconds."
           exit 1
       - name: Run Cypress Tests with Coverage
         run: |
