--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -156,9 +156,10 @@ jobs:
       - name: Wait for Backend to be Ready
         run: |
           echo "Checking backend at URL: ${{ secrets.BACKEND_QA_URL }}/sucursales"
-          for i in {1..24}; do
-            HTTP_CODE=$(curl -s -o /dev/null -w "%{http_code}" --max-time 10 "${{ secrets.BACKEND_QA_URL }}/sucursales" || echo "curl_failed")
-            echo "Attempt $i: HTTP Code: $HTTP_CODE"
+          for i in {1..12}; do
+            HTTP_CODE=$(curl -s -L --max-time 10 -o /dev/null -w "%{http_code}" "${{ secrets.BACKEND_QA_URL }}/sucursales" || echo "curl_failed")
+            EFFECTIVE_URL=$(curl -s -L --max-time 10 -o /dev/null -w "%{url_effective}" "${{ secrets.BACKEND_QA_URL }}/sucursales" || echo "curl_failed")
+            echo "Attempt $i: HTTP Code: $HTTP_CODE, Effective URL: $EFFECTIVE_URL"
             if [ "$HTTP_CODE" = "200" ]; then
               echo "Backend is ready! Responded with HTTP 200"
               exit 0
@@ -166,7 +167,7 @@ jobs:
             echo "Backend not ready yet. Retrying in 5 seconds..."
             sleep 5
           done
-          echo "Timeout: Backend did not respond with HTTP 200 after 120 seconds."
+          echo "Timeout: Backend did not respond with HTTP 200 after 60 seconds."
           exit 1
       - name: Run Cypress Tests with Coverage
         run: |
