--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -100,7 +100,7 @@ jobs:
           path: .
       - name: Create Backend Environment File
         run: |
-          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > env.config
+          echo "DATABASE_URL=${{ secrets.DATABASE_QA_URL }}" > env.config
           echo "FRONTEND_URL=${{ secrets.FRONTEND_QA_URL }}" >> env.config
       - name: Login to Azure
         uses: azure/login@v1
@@ -147,12 +147,6 @@ jobs:
         run: |
           cd frontend
           npm install
-      - name: Create Frontend .env File
-        run: |
-          cd frontend
-          echo "VITE_API_URL_QA=${{ secrets.BACKEND_QA_URL }}" > .env
-          echo "VITE_API_URL_PROD=${{ secrets.BACKEND_PROD_URL }}" >> .env
-          echo "VITE_FRONTEND_URL=${{ secrets.FRONTEND_QA_URL }}" >> .env
       - name: Run Cypress Tests with Coverage
         run: |
           cd frontend
@@ -179,7 +173,7 @@ jobs:
           path: .
       - name: Create Backend Environment File
         run: |
-          echo "DATABASE_URL=${{ secrets.DATABASE_URL }}" > env.config
+          echo "DATABASE_URL=${{ secrets.DATABASE_PROD_URL }}" > env.config
           echo "FRONTEND_URL=${{ secrets.FRONTEND_PROD_URL }}" >> env.config
       - name: Login to Azure
         uses: azure/login@v1
