--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,21 +1,31 @@
 version: "3.8"
 services:
-  db:
+  inversur-db-test:
     image: postgres:latest
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: dbname
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: Jimbo132
+      POSTGRES_DB: test
     ports:
       - "5432:5432"
+
+  inversur-db:
+    image: postgres:latest
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: Jimbo132
+      POSTGRES_DB: inversur
+    ports:
+      - "5433:5432"
 
   pgadmin:
     image: dpage/pgadmin4
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_PASSWORD: Jimbo132
     ports:
       - "8080:80"
     depends_on:
-      - db
+      - inversur-db-test
+      - inversur-db
 
