--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,7 +25,21 @@ jobs:
       - name: Run Backend Tests with Coverage
         run: |
           cd backend
-          pytest -v --cov=src --cov-report=html --cov-report=xml
+          pytest -v --cov=src --cov-report=html --cov-report=xml --junitxml=pytest-report.xml
+      - name: Publish Test Results
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Pytest Results
+          path: backend/pytest-report.xml
+          reporter: java-junit
+      - name: Code Coverage Summary
+        uses: irongut/CodeCoverageSummary@v1.3.0
+        with:
+          filename: backend/coverage.xml
+          format: markdown
+          output: summary
+          fail_below_min: false
       - name: Upload Backend Coverage Report
         uses: actions/upload-artifact@v4
         with:
@@ -66,6 +80,17 @@ jobs:
         run: |
           cd frontend
           npm test -- --coverage
+      - name: Publish Test Results
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Jest Results
+          path: frontend/junit.xml
+          reporter: jest-junit
+      - name: Jest Coverage Report
+        uses: ArtiomTr/jest-coverage-report-action@v2
+        with:
+          output: report-markdown
       - name: Upload Frontend Coverage Report
         uses: actions/upload-artifact@v4
         with:
@@ -157,6 +182,17 @@ jobs:
         run: |
           cd frontend
           npx cypress run
+      - name: Publish Test Results
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Cypress Results
+          path: frontend/cypress/results-*.xml
+          reporter: mocha-junit
+      - name: Jest Coverage Report
+        uses: ArtiomTr/jest-coverage-report-action@v2
+        with:
+          output: report-markdown
       - name: Upload Cypress Coverage Report
         uses: actions/upload-artifact@v4
         with:
