--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,8 @@
         "identity-obj-proxy": "^3.0.0",
         "jest": "^29.7.0",
         "jest-environment-jsdom": "^29.7.0",
+        "jest-junit": "^16.0.0",
+        "mocha-junit-reporter": "^2.2.1",
         "nyc": "^17.1.0",
         "vite": "^6.3.3",
         "vite-plugin-istanbul": "^7.0.0"
